# Marriage

./: .replit  app.py  package-lock.json  package.json  pyproject.toml
.streamlit/: config.toml
celebration-event-booking/: package-lock.json  package.json
celebration-event-booking/client/: package.json  tailwind.config.js
celebration-event-booking/client/public/: index.html  manifest.json
celebration-event-booking/client/src/: App.js  index.css  temp-index.css
celebration-event-booking/client/src/components/: Footer.js  HeroSection.js  Navbar.js  ServicesSection.js  TestimonialSlider.js  WhatsAppButton.js
celebration-event-booking/client/src/pages/: Contact.js  Home.js  Wedding.js
celebration-event-booking/server/: index.js
celebration-event-booking/server/models/: Booking.js  Event.js  User.js
celebration-event-booking/server/routes/: bookings.js  events.js  users.js
modules/: __init__.py  ai_assistant.py  data_processor.py  social_scraper.py  visualizer.py  web_scraper.py
simple-demo/: package.json
simple-demo/public/: index.html
simple-demo/src/: App.js  index.css
simple-demo/src/components/: About.js  ContactForm.js  Gallery.js  MobileNav.js  ServiceDetail.js  ThemeToggle.js  VideoBackground.js  WhatsAppButton.js
simple-demo/src/pages/: Contact.js
