[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.13.3",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    "twilio>=9.5.2",
    "wordcloud>=1.9.4",
]
